--- a/index.html
+++ b/index.html
@@ -1,14 +1,103 @@
 <html lang="en">
+
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href ="style.css"> 
-    
+    <title>BLOG POST</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600,300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Poppins:wght@600,300&display=swap"
+        rel="stylesheet">
 </head>
 <body>
-    <h1> Everything Baking</h1>
-    
+
+    <div class="top">
+        <h2 class="top__head1"> Ashley's Blog</h2>
+        <h1 class="top__head2"> Everything Baking</h1>
+
+    </div>
+    <!----post1-->
+    <div class="blogpost1">
+        <div class="shared-container">
+            <img src="rai-vidanes-tVy3x2Vu_z4-unsplash (1).jpg">
+        </div>
+        <p class="shared-date">
+            17 Sep 2023/ Baking
+        </p>
+
+
+        <p class="shared-title">
+            Chocolate Chip Cookies
+        </p>
+        <p class="shared-description">
+            We're sharing the ultimate recipe for crafting irresistibly delicious cookies that are crispy on the
+            outside, gooey on the inside, and loaded with rich, melty chocolate chips. Stay tuned for foolproof
+            tips and step-by-step instructions to satisfy your sweet cravings...
+        </p>
+        <p>
+            <a href="https://joyfoodsunshine.com/the-most-amazing-chocolate-chip-cookies/">Read more</a>
+        </p>
+    </div>
+
+
+    <!----post2-->
+
+
+    <div class="blogpost2">
+        <div class="shared-container">
+            <img src="brigitte-tohm-vIx9j3ITfaQ-unsplash.jpg">
+        </div>
+        <p class="shared-date">
+            17 Sep 2023/ Baking
+        </p>
+
+
+        <p class="shared-title">
+            Pastel Macarons
+        </p>
+        <p class="shared-description">
+            We'll guide you through the delicate process of achieving that perfect meringue and macaronage. Get
+            ready to impress your friends and family with these delectable French treats, as we share essential
+            tips that will make your macarons the star of any occasion...
+        </p>
+        <p>
+            <a href="https://sallysbakingaddiction.com/french-macarons/">Read more</a>
+        </p>
+    </div>
+
+
+    <!----post3-->
+
+
+    <div class="blogpost3">
+        <div class="shared-container">
+            <img src="svetlana-sidorenko-sd4E0SLVgmw-unsplash.jpg">
+        </div>
+        <p class="shared-date">
+            17 Sep 2023/ Baking
+        </p>
+
+
+        <p class="shared-title">
+            Simpsons Donuts
+        </p>
+        <p class="shared-description">
+            We'll share a delectable recipe that captures the essence of Homer's favorite treat, complete with
+            that irresistible pink frosting and rainbow sprinkles. Get ready to satisfy your sweet tooth while
+            bringing a touch of childhood nostalgia...
+        </p>
+        <p>
+            <a href="https://www.theflavorbender.com/simpsons-doughnuts-best/">Read more</a>
+        </p>
+    </div>
+
 </body>
+
+
 </html>
